--- a/project/skyway_android_sdk/app/build.gradle
+++ b/project/skyway_android_sdk/app/build.gradle
@@ -42,11 +42,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation 'com.ntt.skyway:room:1.0.0'
+//    implementation 'com.ntt.skyway:room:1.1.0'
 
-//    implementation project(":core")
-//    implementation project(":sfubot")
-//    implementation project(":room")
+    implementation project(":core")
+    implementation project(":sfubot")
+    implementation project(":room")
 
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
