--- a/project/skyway_android_sdk/core/build.gradle
+++ b/project/skyway_android_sdk/core/build.gradle
@@ -75,8 +75,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.6.4"
 
     // libwebrtc
-    implementation "com.ntt.skyway:libwebrtc:1.0.0"
-//    implementation project(':libwebrtc')
+//    implementation "com.ntt.skyway:libwebrtc:1.0.0"
+    implementation project(':libwebrtc')
 }
 
 tasks.dokkaHtml.configure {
@@ -103,7 +103,7 @@ publishing {
         GitHubPackages(MavenPublication) {
             groupId "com.ntt.skyway"
             artifactId "core"
-            version "1.0.0"
+            version "1.1.0"
 
             afterEvaluate {
                 from components.release
