--- a/project/skyway_android_sdk/room/build.gradle
+++ b/project/skyway_android_sdk/room/build.gradle
@@ -53,12 +53,12 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
 
     // skyway-core
-    api 'com.ntt.skyway:core:1.0.0'
-//    implementation project(":core")
+//    api 'com.ntt.skyway:core:1.1.0'
+    implementation project(":core")
 
     // sfu-bot
-    api 'com.ntt.skyway:sfubot:1.0.0'
-//    implementation project(":sfubot")
+//    api 'com.ntt.skyway:sfubot:1.1.0'
+    implementation project(":sfubot")
 }
 
 tasks.dokkaHtml.configure {
@@ -85,7 +85,7 @@ publishing {
         GitHubPackages(MavenPublication) {
             groupId "com.ntt.skyway"
             artifactId "room"
-            version "1.0.0"
+            version "1.1.0"
 
             afterEvaluate {
                 from components.release
