--- a/project/skyway_android_sdk/sfubot/build.gradle
+++ b/project/skyway_android_sdk/sfubot/build.gradle
@@ -53,8 +53,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
 
     // skyway-core
-    implementation 'com.ntt.skyway:core:1.0.0'
-//    implementation project(":core")
+//    implementation 'com.ntt.skyway:core:1.1.0'
+    implementation project(":core")
 }
 
 tasks.dokkaHtml.configure {
@@ -81,7 +81,7 @@ publishing {
         GitHubPackages(MavenPublication) {
             groupId "com.ntt.skyway"
             artifactId "sfubot"
-            version "1.0.0"
+            version "1.1.0"
 
             afterEvaluate {
                 from components.release
