--- a/examples/QuickStart/app/build.gradle
+++ b/examples/QuickStart/app/build.gradle
@@ -34,13 +34,20 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //skyway
-    implementation 'com.ntt.skyway:room:1.0.0'
+    implementation files('libs/libwebrtc.aar')
+    implementation files('libs/skyway-core.aar')
+    implementation files('libs/skyway-sfubot.aar')
+    implementation files('libs/skyway-room.aar')
+
+    // WebSocket
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+
+    //  gson
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
