--- a/examples/QuickStart/app/src/main/AndroidManifest.xml
+++ b/examples/QuickStart/app/src/main/AndroidManifest.xml
@@ -2,15 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ntt.skyway.example.quickstart">
-
-    <!-- ネットワーク接続に必要なパーミッション  -->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
-    <!-- カメラ映像・マイク音声の取得に必要なパーミッション  -->
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <!-- ネットワーク接続に必要なパーミッション -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- カメラ映像・マイク音声の取得に必要なパーミッション -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +17,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SkywayQuickStartApp"
+        android:theme="@style/Theme.SkyWayQuickStartApp"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
