--- a/project/skyway_android_sdk/app/build.gradle
+++ b/project/skyway_android_sdk/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-//    implementation 'com.ntt.skyway:room:1.1.0'
+//    implementation 'com.ntt.skyway:room:1.2.0'
 
     implementation project(":core")
     implementation project(":sfubot")
@@ -51,4 +51,6 @@ dependencies {
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+
+    implementation 'com.google.code.gson:gson:2.9.1'
 }
