--- a/project/skyway_android_sdk/room/build.gradle
+++ b/project/skyway_android_sdk/room/build.gradle
@@ -66,12 +66,12 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
 
     // skyway-core
-    api 'com.ntt.skyway:core:1.2.1'
-//    implementation project(":core")
+//    api 'com.ntt.skyway:core:1.2.1'
+    implementation project(":core")
 
     // sfu-bot
-    api 'com.ntt.skyway:sfubot:1.2.1'
-//    implementation project(":sfubot")
+//    api 'com.ntt.skyway:sfubot:1.2.1'
+    implementation project(":sfubot")
 }
 
 tasks.dokkaHtml.configure {
