--- a/project/skyway_android_sdk/sfubot/build.gradle
+++ b/project/skyway_android_sdk/sfubot/build.gradle
@@ -66,8 +66,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
 
     // skyway-core
-    implementation 'com.ntt.skyway:core:1.2.1'
-//    implementation project(":core")
+//    implementation 'com.ntt.skyway:core:1.2.1'
+    implementation project(":core")
 }
 
 tasks.dokkaHtml.configure {
