--- a/examples/QuickStart/app/build.gradle
+++ b/examples/QuickStart/app/build.gradle
@@ -9,7 +9,7 @@ android {
     defaultConfig {
         applicationId "com.ntt.skyway.example.quickstart"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -29,13 +29,19 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    // 以下gradle ver8系で必要な定義
+    buildFeatures {
+        compose false
+    }
+    namespace 'com.ntt.skyway.example.quickstart'
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     //skyway
