--- a/project/skyway_android_sdk/room/build.gradle
+++ b/project/skyway_android_sdk/room/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id 'maven-publish'
 }
 
+def SkyWayVer = rootProject.ext.SkyWayVer
+
 android {
     compileSdk 33
 
@@ -49,6 +51,23 @@ android {
             withSourcesJar()
         }
     }
+
+
+    libraryVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "skyway-${archivesBaseName}.aar"
+        }
+    }
+
+}
+
+afterEvaluate {
+    def outputFileName = file("$buildDir/outputs/aar/skyway-${archivesBaseName}.aar")
+    tasks.named("assembleRelease").configure {
+        doLast {
+            outputFileName.renameTo("${project.rootDir.absolutePath}/${rootProject.ext.output_aar_dir}/skyway-${archivesBaseName}.aar")
+        }
+    }
 }
 
 dependencies {
@@ -66,11 +85,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
 
     // skyway-core
-//    api 'com.ntt.skyway:core:1.2.2'
+//    api 'com.ntt.skyway:core:1.3.0'
     implementation project(":core")
 
     // sfu-bot
-//    api 'com.ntt.skyway:sfubot:1.2.2'
+//    api 'com.ntt.skyway:sfubot:1.3.0'
     implementation project(":sfubot")
 }
 
@@ -98,7 +117,7 @@ publishing {
         GitHubPackages(MavenPublication) {
             groupId "com.ntt.skyway"
             artifactId "room"
-            version "1.2.2"
+            version SkyWayVer
 
             afterEvaluate {
                 from components.release
