--- a/project/skyway_android_sdk/sfubot/build.gradle
+++ b/project/skyway_android_sdk/sfubot/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id 'maven-publish'
 }
 
+def SkyWayVer = rootProject.ext.SkyWayVer
+
 android {
     compileSdk 33
 
@@ -49,6 +51,22 @@ android {
             withSourcesJar()
         }
     }
+
+    libraryVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "skyway-${archivesBaseName}.aar"
+        }
+    }
+
+}
+
+afterEvaluate {
+    def outputFileName = file("$buildDir/outputs/aar/skyway-${archivesBaseName}.aar")
+    tasks.named("assembleRelease").configure {
+        doLast {
+            outputFileName.renameTo("${project.rootDir.absolutePath}/${rootProject.ext.output_aar_dir}/skyway-${archivesBaseName}.aar")
+        }
+    }
 }
 
 dependencies {
@@ -66,7 +84,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
 
     // skyway-core
-//    implementation 'com.ntt.skyway:core:1.2.2'
+//    implementation 'com.ntt.skyway:core:1.3.0'
     implementation project(":core")
 }
 
@@ -94,7 +112,7 @@ publishing {
         GitHubPackages(MavenPublication) {
             groupId "com.ntt.skyway"
             artifactId "sfubot"
-            version "1.2.2"
+            version SkyWayVer
 
             afterEvaluate {
                 from components.release
