--- a/project/skyway_android_sdk/app/build.gradle
+++ b/project/skyway_android_sdk/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
 //    implementation 'com.ntt.skyway:room:1.2.2'
 
     implementation project(":core")
