--- a/project/skyway_android_sdk/libskywaytest/src/main/cpp/CMakeLists.txt
+++ b/project/skyway_android_sdk/libskywaytest/src/main/cpp/CMakeLists.txt
@@ -13,11 +13,14 @@ set_target_properties( libwebrtc
         ${LIBWEBRTC_BINARY_PATH}/libwebrtc.a
         )
 
+set( LIBWEBRTC_INCLUDE_PATH ${LIBWEBRTC_DIR}/src CACHE STRING "libwebrtc include path" FORCE)
+set( LIBWEBRTC_BINARY_PATH ${LIBWEBRTC_DIR}/src/out/${ANDROID_ABI}/obj CACHE STRING "libwebrtc binary path" FORCE)
+
 # Build libmediasoupclient
 add_subdirectory( ${LIBMEDIASOUPCLIENT_DIR} ${LIBMEDIASOUPCLIENT_DIR}/${ANDROID_ABI} )
 
 # libskyway_
-FILE( GLOB_RECURSE LIBSKYWAY ${LIBSKYWAY_DIR}/src/*.cpp )
+FILE( GLOB_RECURSE LIBSKYWAY ${LIBSKYWAY_DIR}/include/skyway/*.cpp )
 add_library( libskyway_ SHARED ${LIBSKYWAY} )
 
 target_include_directories( libskyway_ PRIVATE
