--- a/project/skyway_android_sdk/libskywaytest/build.gradle
+++ b/project/skyway_android_sdk/libskywaytest/build.gradle
@@ -79,5 +79,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+
     implementation project(":core")
 }
