--- a/project/skyway_android_sdk/room/build.gradle
+++ b/project/skyway_android_sdk/room/build.gradle
@@ -88,11 +88,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
 
     // skyway-core
-//    api 'com.ntt.skyway:core:1.6.1'
+//    api "com.ntt.skyway:core:${SkyWayVer}"
     implementation project(":core")
 
     // sfu-bot
-//    api 'com.ntt.skyway:sfubot:1.6.1'
+//    api "com.ntt.skyway:sfubot:${SkyWayVer}"
     implementation project(":sfubot")
 }
 
