--- a/project/skyway_android_sdk/app/build.gradle
+++ b/project/skyway_android_sdk/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'kotlin-android'
 }
 
+def SkyWayVer = rootProject.ext.SkyWayVer
+
 android {
     compileSdk 33
 
@@ -54,13 +56,15 @@ dependencies {
 
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 
-//    implementation 'com.ntt.skyway:room:1.2.2'
-
     implementation project(":core")
     implementation project(":sfubot")
     implementation project(":room")
 
     implementation project(":authtoken")
+
+//    implementation "com.ntt.skyway:core:${SkyWayVer}"
+//    implementation "com.ntt.skyway:sfubot:${SkyWayVer}"
+//    implementation "com.ntt.skyway:room:${SkyWayVer}"
 
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
