--- a/project/skyway_android_sdk/build.gradle
+++ b/project/skyway_android_sdk/build.gradle
@@ -11,7 +11,8 @@ buildscript {
     }
 }
 
-ext.SkyWayVer = "2.0.1"
+ext.SkyWayVer = "2.1.0"
+ext.libwebrtcVer = "1.1.1"
 ext.output_aar_dir = "outputs-aar"
 
 task clean(type: Delete) {
