--- a/project/skyway_android_sdk/libskywaytest/build.gradle
+++ b/project/skyway_android_sdk/libskywaytest/build.gradle
@@ -6,6 +6,7 @@ plugins {
 android {
     namespace 'com.ntt.skyway.libskywaytest'
     compileSdk 33
+    ndkVersion "23.0.7599858"
 
     defaultConfig {
         applicationId "com.ntt.skyway.libskywaytest"
@@ -33,11 +34,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     externalNativeBuild {
         cmake {
@@ -47,6 +48,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.4.3'
