--- a/project/skyway_android_sdk/room/build.gradle
+++ b/project/skyway_android_sdk/room/build.gradle
@@ -18,6 +18,10 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
 
+    buildFeatures {
+        buildConfig true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -38,12 +42,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     publishing {
@@ -51,6 +55,7 @@ android {
             withSourcesJar()
         }
     }
+    namespace 'com.ntt.skyway.room'
 
 
     libraryVariants.all { variant ->
