--- a/examples/AutoSubscribe/app/build.gradle
+++ b/examples/AutoSubscribe/app/build.gradle
@@ -47,6 +47,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // skyway
-    implementation 'com.ntt.skyway:libwebrtc:1.1.1'
-    implementation 'com.ntt.skyway:room:2.1.6'
+    implementation 'com.ntt.skyway:room:+'
 }
