--- a/examples/QuickStart/app/build.gradle
+++ b/examples/QuickStart/app/build.gradle
@@ -45,15 +45,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     //skyway
-    implementation files('libs/libwebrtc.aar')
-    implementation files('libs/skyway-core.aar')
-    implementation files('libs/skyway-sfubot.aar')
-    implementation files('libs/skyway-room.aar')
-
-    // WebSocket
-    implementation "com.squareup.okhttp3:okhttp:4.10.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
-
-    //  gson
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.ntt.skyway:room:+'
 }
